updated client for tasks

--- a/client/src/app/shared/task-info-dialog/task-info-dialog.component.html
+++ b/client/src/app/shared/task-info-dialog/task-info-dialog.component.html
@@ -1,7 +1,12 @@
-<h2 mat-dialog-title>Task</h2>
+<h2 mat-dialog-title>
+  Task<button matSuffix mat-mini-fab (click)="deleteTask()">
+    <mat-icon>delete</mat-icon>
+  </button>
+</h2>
+
 <mat-dialog-content>
   <form [formGroup]="form">
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline" style="margin-top: 6px">
       <mat-label>Title</mat-label>
       <input matInput formControlName="title" />
     </mat-form-field>
