client: updated UI according to server changes, refactored a bit

--- a/client/src/app/shared/logs-dialog/logs-dialog.component.html
+++ b/client/src/app/shared/logs-dialog/logs-dialog.component.html
@@ -1,7 +1,8 @@
 <h3 mat-dialog-title>Project logs</h3>
 <mat-dialog-content>
   <mat-list>
-    @for(change of (changes$|async); track $index){
+    @for((change of (changes$ | async | sortByDate:'creationDate')) ; track
+    $index){
     <mat-list-item>{{ convertChange(change) }}</mat-list-item>
     <mat-divider></mat-divider>
     }
