--- a/client/src/app/shared/task-info-dialog/task-info-dialog.component.html
+++ b/client/src/app/shared/task-info-dialog/task-info-dialog.component.html
@@ -11,7 +11,7 @@
       <input matInput formControlName="title" />
     </mat-form-field>
     <mat-form-field appearance="outline">
-      <mat-label>Textarea</mat-label>
+      <mat-label>Text</mat-label>
       <textarea matInput formControlName="text"></textarea>
     </mat-form-field>
     <mat-form-field appearance="outline">
