changed task table styling

--- a/client/src/app/core/dashboard/dashboard.component.html
+++ b/client/src/app/core/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
     } }
   </div>
 
-  <mat-tab-group>
+  <mat-tab-group style="height: 90%">
     @if(currentProject$ | async; as currentProject){
     <mat-tab label="Details">
       <div class="tab">
