--- a/client/src/app/core/dashboard/tasks-table-tab/tasks-table-tab.component.scss
+++ b/client/src/app/core/dashboard/tasks-table-tab/tasks-table-tab.component.scss
@@ -1,15 +1,25 @@
 .tab {
-  margin-top: 4px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: auto;
-  .tasks-table {
-    width: 60%;
-    min-width: 20%;
+  height: 80%;
+  width: 90%;
+  margin-left: 5%;
+  .mat-mdc-table {
+    width: 70%;
     height: 70%;
-    border: solid darkgrey;
-    overflow-y: auto;
-    height: 80%;
+    overflow: auto;
+    .mat-mdc-header-row,
+    .mat-mdc-row,
+    .mat-mdc-footer-row {
+      display: table;
+      width: 100%;
+      table-layout: fixed;
+    }
+
+    .mat-mdc-header-cell,
+    .mat-mdc-cell {
+      vertical-align: middle;
+    }
   }
 }
