--- a/client/src/app/shared/task-info-dialog/task-info-dialog.component.html
+++ b/client/src/app/shared/task-info-dialog/task-info-dialog.component.html
@@ -14,6 +14,7 @@
       <mat-label>Text</mat-label>
       <textarea matInput formControlName="text"></textarea>
     </mat-form-field>
+    @if(!!data?.task) {
     <mat-form-field appearance="outline">
       <mat-label>Status</mat-label>
       <mat-select formControlName="status">
@@ -22,6 +23,7 @@
         }
       </mat-select>
     </mat-form-field>
+    }
     <fieldset [disabled]="!isManager">
       <app-select-list
         [userRole]="employee"
