--- a/client/src/app/core/header-menu/header-menu.component.html
+++ b/client/src/app/core/header-menu/header-menu.component.html
@@ -7,11 +7,34 @@
   <button mat-button routerLink="/panel">Admin panel</button>
   } }
   <span class="spacer"></span>
-  <button mat-icon-button>
-    <mat-icon>settings</mat-icon>
-  </button>
 
-  @if (currentUser$|async; as user) {
+  @if (currentUser$|async; as user;){
+  <button mat-icon-button [matMenuTriggerFor]="roles">
+    <mat-icon>notifications</mat-icon>
+  </button>
+  <mat-menu #roles="matMenu" xPosition="before">
+    @if(isManagerInGeneral(user)){
+    <button mat-menu-item [matMenuTriggerFor]="managerChanges">Manager</button>
+    <mat-menu #managerChanges="matMenu" xPosition="before">
+      @for(change of (managerChanges$ | async); track $index) {
+      <button mat-menu-item (click)="navigateToProject(change.projectId)">
+        {{ convertChange(change) }}
+      </button>
+      }
+    </mat-menu>
+    } @if(isEmployeeInGeneral(user) ){
+    <button mat-menu-item [matMenuTriggerFor]="employeeChanges">
+      Employee
+    </button>
+    <mat-menu #employeeChanges="matMenu" xPosition="before">
+      @for(change of employeeChanges$ | async; track $index) {
+      <button mat-menu-item (click)="navigateToProject(change.projectId)">
+        {{ convertChange(change) }}
+      </button>
+      }</mat-menu
+    >
+    }
+  </mat-menu>
   <button mat-flat-button [routerLink]="['/user', user.id]">
     {{ user.userName }}
   </button>
