--- a/client/src/app/shared/logs-dialog/logs-dialog.component.html
+++ b/client/src/app/shared/logs-dialog/logs-dialog.component.html
@@ -1,8 +1,7 @@
 <h3 mat-dialog-title>Project logs</h3>
 <mat-dialog-content>
   <mat-list>
-    @for((change of (changes$ | async | sortByDate:'creationDate')) ; track
-    $index){
+    @for((change of changes$ | async) ; track $index){
     <mat-list-item>{{ convertChange(change) }}</mat-list-item>
     <mat-divider></mat-divider>
     }
