--- a/client/src/app/shared/avatar-image/avatar-image.component.scss
+++ b/client/src/app/shared/avatar-image/avatar-image.component.scss
@@ -17,6 +17,6 @@
     height: 10px;
     background-color: green;
     border-radius: 50%;
-    border: 2px solid white; /* to create a small border around the dot */
+    border: 2px solid white;
   }
 }
