--- a/client/src/app/core/user-profile/user-profile.component.html
+++ b/client/src/app/core/user-profile/user-profile.component.html
@@ -1,11 +1,10 @@
 <div class="profile">
   <div class="dialog-box">
-    @if (userAuth$ | async; as userAuth) { @if(!userAuth.isBlocked){
+    @if (data$ | async; as data) { @if(!data.userAuth.isBlocked){
     <mat-card>
-      @if(user$ | async){
       <img
         mat-card-image
-        [src]="'data:image/jpeg;base64,' + user.image.content"
+        [src]="getAttpropriateImageSource(data.image.content, data.image.type)"
         (click)="onImageClick()"
       />
       <input
@@ -18,7 +17,7 @@
       <mat-card-content>
         <form [formGroup]="form">
           <fieldset
-            [disabled]="!isUserTheSame(userAuth.id, user.id)"
+            [disabled]="!isUserTheSame(data.userAuth.id, user.id)"
             style="border: none"
           >
             <mat-form-field appearance="outline">
@@ -63,13 +62,12 @@
       <mat-card-actions>
         <button
           mat-flat-button
-          [disabled]="!areActionsAllowed()"
+          [disabled]="!areActionsAllowed() || isBlobGenerating"
           (click)="updateUser()"
         >
           Submit
         </button>
       </mat-card-actions>
-      }
     </mat-card>
     } @else {
     <span
