--- a/client/src/app/core/dashboard/project-details-tab/project-details-tab.component.html
+++ b/client/src/app/core/dashboard/project-details-tab/project-details-tab.component.html
@@ -15,7 +15,7 @@
         <mat-list-item>
           <app-avatar-image
             matListItemAvatar
-            [imageContent]="manager.user.image.content"
+            [imageId]="manager.user.imageId"
             [userName]="manager.user.userName"
           />
           <h3 matListItemTitle>
@@ -51,7 +51,7 @@
         <mat-list-item>
           <app-avatar-image
             matListItemAvatar
-            [imageContent]="employee.user.image.content"
+            [imageId]="employee.user.imageId"
             [userName]="employee.user.userName"
           />
           <h3 matListItemTitle>
