--- a/client/src/app/core/user-profile/user-profile.component.html
+++ b/client/src/app/core/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
     <mat-card>
       <img
         mat-card-image
-        [src]="getAttpropriateImageSource(data.image.content, data.image.type)"
+        [src]="getAttpropriateImageSource(image.content, image.type)"
         (click)="onImageClick()"
       />
       <input
