--- a/client/src/app/shared/avatar-image/avatar-image.component.html
+++ b/client/src/app/shared/avatar-image/avatar-image.component.html
@@ -1,6 +1,7 @@
 <div class="avatar-container">
-  <img class="avatar" [src]="imageContent || ''" />
-  @if((getOnlineUsers() | async)?.includes(userName)){
+  @if(image$|async; as image){
+  <img class="avatar" [src]="image.content || ''" />
+  } @if((getOnlineUsers() | async)?.includes(userName)){
   <span class="online-indicator"></span>
   }
 </div>
