changed tf file + small fix to client

--- a/client/src/app/core/admin-panel/admin-panel.component.html
+++ b/client/src/app/core/admin-panel/admin-panel.component.html
@@ -141,7 +141,7 @@
           (click)="navigateToUser(element.id)"
         >
           <app-avatar-image
-            [imageContent]="element.image.content"
+            [imageId]="element.imageId"
             [userName]="element.userName"
           />
         </td>
